[project]
name = "documents-of-institution-legal-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "gitpython>=3.1.45",
    "go-task-bin>=3.45.5",
    "google-genai>=1.55.0",
    "graphene>=3.4.3",
    "libretranslate>=1.8.3",
    "marko>=2.2.1",
    "matplotlib>=3.10.8",
    "miniwdl>=1.13.1",
    "miniwdl-viz",
    "mkdocs>=1.6.1",
    "mysql-connector-python>=9.5.0",
    "notebook>=7.5.0",
    "ollama>=0.6.1",
    "openai>=2.11.0",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "poetry>=1.8.5",
    "pydrive>=1.3.1",
    "pygithub>=2.8.1",
    "pypandoc>=1.16.2",
    "pytoml>=0.1.21",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
    "transformers>=4.57.3",
]

[tool.uv.sources]
miniwdl-viz = { git = "https://github.com/chanzuckerberg/miniwdl-viz.git" }
